[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/main.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Omenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/background.png" type="Texture" id=4]
[ext_resource path="res://image/iconplayer.png" type="Texture" id=5]
[ext_resource path="res://image/fishl/1.png" type="Texture" id=6]
[ext_resource path="res://image/bm.png" type="Texture" id=7]
[ext_resource path="res://image/guichange.png" type="Texture" id=8]
[ext_resource path="res://image/guiplay.png" type="Texture" id=9]
[ext_resource path="res://image/guioption.png" type="Texture" id=10]
[ext_resource path="res://image/guiquit.png" type="Texture" id=11]
[ext_resource path="res://image/logo.png" type="Texture" id=12]

[node name="MainMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
main = ExtResource( 2 )
omenu = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( -22, -114 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Sprite8" type="Sprite" parent="." index="1"]

position = Vector2( 30, 338 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite2" type="Sprite" parent="." index="2"]

position = Vector2( 792, 244 )
rotation = 0.421506
scale = Vector2( 0.683594, 0.683594 )
texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite7" type="Sprite" parent="." index="3"]

position = Vector2( 154, 278 )
rotation = 0.204139
scale = Vector2( 0.495438, 0.510415 )
texture = ExtResource( 7 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite3" type="Sprite" parent="." index="4"]

position = Vector2( 458, 314 )
scale = Vector2( 0.683594, 0.683594 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite4" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 458, 316 )
scale = Vector2( 0.683594, 0.683594 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite5" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 456, 402 )
scale = Vector2( 0.683594, 0.683594 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite6" type="Sprite" parent="." index="7"]

visible = false
position = Vector2( 458, 496 )
scale = Vector2( 0.683594, 0.683594 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Container" type="Container" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MenuButton" type="TextureButton" parent="Container" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -103.0
margin_top = 200.0
margin_right = 48.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 1
shortcut = null
group = null
texture_normal = ExtResource( 9 )
_sections_unfolded = [ "Margin", "Size Flags", "Textures", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="MenuButton2" type="TextureButton" parent="Container" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -149.0
margin_top = 282.0
margin_right = 74.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Focus", "Margin", "Rect", "Textures", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="MenuButton4" type="TextureButton" parent="Container" index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -115.0
margin_top = 374.0
margin_right = 33.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 1
shortcut = null
group = null
texture_normal = ExtResource( 11 )
_sections_unfolded = [ "Focus", "Margin", "Rect", "Textures", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="TextureRect" type="TextureRect" parent="." index="9"]

modulate = Color( 0.94986, 0.960902, 0.972656, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -316.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[connection signal="pressed" from="Container/MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="pressed" from="Container/MenuButton2" to="." method="_on_MenuButton2_pressed"]

[connection signal="pressed" from="Container/MenuButton4" to="." method="_on_MenuButton4_pressed"]


